--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/editor/editor.main.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/editor/editor.main.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="container" style="height: 100%"></div>
+    <script src="config/main.js"></script>
+</body>
+
+</html>
