--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	</head>
-	<body>
-		<div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
+	<body style="margin: 0;">
+		<div id="container" style="width: 100vw;height: 100vh;border:1px solid grey"></div>
 
 		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
 		<script>
