--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	</head>
-	<body style="margin: 0;">
-		<div id="container" style="width: 100vw;height: 100vh;border:1px solid grey"></div>
 
-		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
-		<script>
-			require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs' } });
-			require(['vs/editor/editor.main'], function () {
-				var editor = monaco.editor.create(document.getElementById('container'), {
-					value: ['function x() {', '\tconsole.log("Hello world!");', '}'].join('\n'),
-					language: 'javascript'
-				});
-			});
-		</script>
-	</body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+</head>
+
+<body style="margin: 0;">
+    <div style="position: fixed; right: 0px;height: 90vh;width: 70vw;">
+        <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
+
+        <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
+        <script>
+            require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs' } });
+            require(['vs/editor/editor.main'], function () {
+                var editor = monaco.editor.create(document.getElementById('container'), {
+                    value: ['function x() {', '\tconsole.log("Hello world!");', '}'].join('\n'),
+                    language: 'javascript'
+                });
+            });
+        </script>
+    </div>
+</body>
+
 </html>
