--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="config/style.css">
+    <title>Code editor - By geoloup team</title>
+    <link rel="shortcut icon" href="config/image/logo.png">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 
 <body style="margin: 0;">
+    <div id="load"><img src="config/image/logo.png"><h1>Code editor</h1></div>
     <div style="position: fixed; right: 0px;height: 90vh;width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
 
@@ -18,6 +22,7 @@
                     language: 'javascript'
                 });
             });
+            document.getElementById("load").remove()
         </script>
     </div>
 </body>
