--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
 </head>
 
 <body style="margin: 0;">
-    <div id="load"><img src="config/image/logo.png"><h1>Code editor</h1></div>
+    <div id="load"><img src="config/image/logo.png">
+        <h1>Code editor</h1>
+    </div>
     <div style="position: fixed; right: 0px;height: 90vh;width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
-        <script>
-            require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs' } });
-            require(['vs/editor/editor.main'], function () {
-                var editor = monaco.editor.create(document.getElementById('container'), {
-                    value: ['function x() {', '\tconsole.log("Hello world!");', '}'].join('\n'),
-                    language: 'javascript'
-                });
-            });
-            document.getElementById("load").remove()
-        </script>
+        <script src="config/main.js"></script>
     </div>
 </body>
 
