--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="load"><img src="config/image/logo.png">
         <h1>Code editor</h1>
     </div>
-    <div style="position: fixed; right: 0px;height: 90vh;width: 70vw;">
+    <div style="position: fixed; right: 0px;height:  calc(100vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
