--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="config/style.css">
-    <title>Code editor - By geoloup team</title>
+    <title>Gcod - By geoloup team</title>
     <link rel="shortcut icon" href="config/image/logo.png">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 
 <body style="margin: 0;">
     <div id="load"><img src="config/image/logo.png">
-        <h1>Code editor</h1>
+        <h1>Gcod</h1>
     </div>
     <div style="position: fixed; right: 0px;height:  calc(100vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
