--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body style="margin: 0;">
     <div id="load"><img src="config/image/logo.png">
-        <h1>Gcod</h1>
+        <h1>Gcod is loading</h1>
     </div>
     <div style="position: fixed; right: 0px;height:  calc(100vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
