--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="config/style.css">
+    <link rel="stylesheet" href="file/style.css">
     <title>Gcod - By geoloup team</title>
     <link rel="shortcut icon" href="config/image/logo.png">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -14,8 +15,8 @@
     </div>
     <div style="position: fixed; right: 0px;height:  calc(100vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
-
         <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
+        <script src="file/main.js"></script>
         <script src="config/main.js"></script>
     </div>
 </body>
