--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <div id="load"><img src="config/image/logo.png">
         <h1>Gcod is loading</h1>
     </div>
+    <div style="position: fixed; left: 0px;height:  calc(100vh - 1px);width: 30vw;">
+        <div id="file" style="width: 100%;height: 100%;border:1px solid grey"></div>
+        <script src="file/main.js"></script>
+    </div>
     <div style="position: fixed; right: 0px;height:  calc(100vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
         <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
-        <script src="file/main.js"></script>
         <script src="config/main.js"></script>
     </div>
 </body>
