--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <h1>Gcod is loading</h1>
     </div>
     <div style="position: fixed; left: 0px;height:  calc(100vh - 1px);width: 30vw;background: black;color: white;"></div>
-    <div style="position: fixed; right: 0px;height:  calc(10vh - 1px);width: 70vw;">
-        <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
-        <script src="config/top.js"></script>
-    </div>
-    <div style="position: fixed; right: 0px;height:  calc(90vh - 1px);width: 70vw;">
+    <div style="position: fixed; right: 0px;top: 0px;height:  calc(10vh - 1px);width: 70vw;"></div>
+    <div style="position: fixed; right: 0px;bottom: 0px;height:  calc(90vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
         <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
         <script src="config/main.js"></script>
