--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="load"><img src="config/image/logo.png">
         <h1>Gcod is loading</h1>
     </div>
-    <div style="position: fixed; left: 0px;height: 100vh;width: 30vw;background: black;color: white;"></div>
+    <div style="position: fixed; left: 0px;height: 100vh;width: 30vw;background: black;color: white;">
+        <script src="file/main.js"></script>
+    </div>
     <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 70vw;"></div>
     <div style="position: fixed; right: 0px;bottom: 0px;height:  calc(97vh - 1px);width: 70vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
