add custom function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="load"><img src="config/image/logo.png">
         <h1>Gcod is loading</h1>
     </div>
+    <script src="config/custom.js"></script>
     <div style="position: fixed; left: 0px;height: 100vh;width: 30vw;background: black;color: white;">
         <script src="file/main.js"></script>
     </div>
