--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div>
     <script src="config/custom.js"></script>
     <div style="position: fixed; left: 0px;height: 100vh;width: 20vw;background: black;color: white;">
+    </div>
+    <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 80vw;">
         <button onclick="run()">run</button>
     </div>
-    <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 80vw;"></div>
     <div style="position: fixed; right: 0px;bottom: 0px;height:  calc(97vh - 1px);width: 80vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
     </div>
