--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <script src="config/custom.js"></script>
     <div style="position: fixed; left: 0px;height: 100vh;width: 20vw;background: black;color: white;">
+        <div id="logs"></div>
     </div>
     <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 80vw;">
         <button onclick="run()" class="run">run</button>
