--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Gcod is loading</h1>
     </div>
     <script src="config/custom.js"></script>
-    <div style="position: fixed; left: 0px;height: 100vh;width: 20vw;background: black;color: white;">
+    <div class="h" style="position: fixed; left: 0px;height: 100vh;width: 20vw;background: black;color: white;">
         <div id="logs"></div>
     </div>
     <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 80vw;">
