--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body style="margin: 0;">
-    <div id="load"><img src="config/image/logo.png">
+    <div id="load">
+        <img src="config/image/logo.png">
         <h1>Gcod is loading</h1>
     </div>
     <script src="config/custom.js"></script>
