Changed document title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="config/style.css">
     <link rel="stylesheet" href="file/style.css">
-    <title>Gcod - By geoloup team</title>
+    <title>IC-extention - By geoloup team</title>
     <link rel="shortcut icon" href="config/image/logo.png">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
