--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
     </div>
     <script src="file/main.js"></script>
+    <iframe src="beta.chat.geoloup.com/d/session/"></iframe>
 </body>
 
 </html>
