FIx firebase normaly

--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
     <link rel="shortcut icon" href="config/image/logo.png">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/min/vs/loader.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 </head>
 
 <body style="margin: 0;">
+    <script>
+        firebase.initializeApp(firebaseConfig);
+        var database = firebase.database();
+        const firebaseConfig = {
+            apiKey: "AIzaSyD9po7l-vwO0VrY1rMYDFTYNlEBv54T6do",
+            authDomain: "ic-hat.firebaseapp.com",
+            databaseURL: "https://ic-hat-default-rtdb.firebaseio.com",
+            projectId: "ic-hat",
+            storageBucket: "ic-hat.appspot.com",
+            messagingSenderId: "720687529085",
+            appId: "1:720687529085:web:2d964e880c5e2398058514",
+            measurementId: "G-YC8K0D7GLR"
+        };
+    </script>
     <div id="load">
         <img src="config/image/logo.png">
         <h1>Gcod is loading</h1>
