added export function and did css

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div style="position: fixed;background: black;right: 0px;top: 0px;height: 3vh;width: 80vw;">
         <button onclick="run()" class="run">run</button>
+        <button onclick="codeExport()" class="export">export</button>
     </div>
     <div style="position: fixed; right: 0px;bottom: 0px;height:  calc(97vh - 1px);width: 80vw;">
         <div id="container" style="width: 100%;height: 100%;border:1px solid grey"></div>
