Fixed the publishextention functoin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="form-popup" id="myForm">
         <form onsubmit="return false" class="form-container">
-            <h1>Login</h1>
+            <h1>Publish extention</h1>
 
             <label for="name"><b>Extention name</b></label>
             <input type="text" placeholder="Enter Extention name" name="name" required>
