--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </form>
     </div>
     <script src="file/main.js"></script>
-    <iframe src="https://beta.chat.geoloup.com/d/session/"></iframe>
+    <iframe src="https://chat.geoloup.com/d/session/"></iframe>
 </body>
 
 </html>
