--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="form-popup" id="myForm">
         <form onsubmit="return false" class="form-container">
             <h1>Publish extention</h1>
+            <h3>Please not that they need the emlator to work as a extention on ic-hat</h3>
 
             <label for="name"><b>Extention name</b></label>
             <input type="text" placeholder="Enter Extention name" name="name" required>
